Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5526

Assertion `proxied_user->host.length' fails on GRANT PROXY ON <role>

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.7
    • 10.0.8
    • None
    • None

    Description

      create role r1;
      create user user;
      grant proxy on r1 to user;

      10.0/sql/sql_acl.cc:6135: bool mysql_grant(THD*, const char*, List<st_lex_user>&, ulong, bool, bool): Assertion `proxied_user->host.length' failed.
      140113 16:05:16 [ERROR] mysqld got signal 6 ;

      #7  0x00007f900e7d0192 in __GI___assert_fail (assertion=0xedeee6 "proxied_user->host.length", file=0xeddfc0 "10.0/sql/sql_acl.cc", line=6135, function=0xee0c00 "bool mysql_grant(THD*, const char*, List<st_lex_user>&, ulong, bool, bool)") at assert.c:103
      #8  0x00000000005d490d in mysql_grant (thd=0x7f8ff33f5070, db=0x0, list=..., rights=0, revoke_grant=false, is_proxy=true) at 10.0/sql/sql_acl.cc:6135
      #9  0x000000000065331d in mysql_execute_command (thd=0x7f8ff33f5070) at 10.0/sql/sql_parse.cc:4184
      #10 0x0000000000658f26 in mysql_parse (thd=0x7f8ff33f5070, rawbuf=0x7f8fe3413088 "grant proxy on r1 to user", length=25, parser_state=0x7f90105b84b0) at 10.0/sql/sql_parse.cc:6394
      #11 0x000000000064b8a8 in dispatch_command (command=COM_QUERY, thd=0x7f8ff33f5070, packet=0x7f8ff3bf3071 "grant proxy on r1 to user", packet_length=25) at 10.0/sql/sql_parse.cc:1296
      #12 0x000000000064abf6 in do_command (thd=0x7f8ff33f5070) at 10.0/sql/sql_parse.cc:993
      #13 0x000000000076b719 in do_handle_one_connection (thd_arg=0x7f8ff33f5070) at 10.0/sql/sql_connect.cc:1379
      #14 0x000000000076b46c in handle_one_connection (arg=0x7f8ff33f5070) at 10.0/sql/sql_connect.cc:1293
      #15 0x0000000000a121af in pfs_spawn_thread (arg=0x7f8ff371eef0) at 10.0/storage/perfschema/pfs.cc:1853
      #16 0x00007f900f9a1e9a in start_thread (arg=0x7f90105b9700) at pthread_create.c:308
      #17 0x00007f900e8953fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      revision-id: elenst@opensuse.home-20131228163657-kk32bmtqogy61mwm
      revno: 3962
      branch-nick: 10.0

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 50m
                50m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.